--- a/_includes/sections/cta-covid.html
+++ b/_includes/sections/cta-covid.html
@@ -1,6 +1,6 @@
 <div class="lh-copy measure-narrow ml3 ba bw2 b--accent pa3">
-  <p class="mt0">Like others in the Great Lakes region and Toronto, we’ve been closely monitoring the Novel Coronavirus 2019 situation via Toronto Public Health and Ontario Ministry of Health.</p>
-  <p>We're offering assistance and sharing resources on how we work as a remote-first worker co-operative in solidarity with workers transitioning to working from home.</p>
+  <p class="mt0">Like others in the Great Lakes region and Toronto, we’ve been closely monitoring the Novel Coronavirus 2019 situation via <a class="accent" href="https://www.toronto.ca/community-people/health-wellness-care/diseases-medications-vaccines/coronavirus/" target="_blank">Toronto Public Health</a> and <a class="accent" href="https://www.ontario.ca/page/2019-novel-coronavirus" target="_blank">Ontario Ministry of Health</a>.</p>
+  <p>We're offering assistance and sharing resources on how we work as a remote-first organization.</p>
   <p class="mb0">
     <a href="http://covid19.hypha.coop/" class="f6 link dim ph4 pv3 dib white bg-accent" target="_blank">Check out our resource</a>
   </p>
