--- a/_includes/sections/cta-covid.html
+++ b/_includes/sections/cta-covid.html
@@ -1,7 +1,7 @@
 <div class="lh-copy measure-narrow ml3 ba bw2 b--accent pa3">
-  <p class="mt0">Like others in the Great Lakes region and Toronto, we’ve been closely monitoring the Novel Coronavirus 2019 situation via <a class="accent link underline-hover" href="https://www.toronto.ca/community-people/health-wellness-care/diseases-medications-vaccines/coronavirus/" target="_blank">Toronto Public Health</a> and <a class="accent link underline-hover" href="https://www.ontario.ca/page/2019-novel-coronavirus" target="_blank">Ontario Ministry of Health</a>.</p>
+  <p class="mt0">Like others in the Great Lakes region and Toronto, we’ve been closely monitoring the Novel Coronavirus 2019 situation via <a class="accent link underline-hover" href="https://www.toronto.ca/community-people/health-wellness-care/diseases-medications-vaccines/coronavirus/" target="_blank" rel="noopener">Toronto Public Health</a> and <a class="accent link underline-hover" href="https://www.ontario.ca/page/2019-novel-coronavirus" target="_blank" rel="noopener">Ontario Ministry of Health</a>.</p>
   <p>We're offering assistance and sharing resources on how we work as a remote-first organization.</p>
   <p class="mb0">
-    <a href="http://covid19.hypha.coop/" class="f6 link dim ph4 pv3 dib white bg-accent" target="_blank">Check out our resource</a>
+    <a href="https://covid19.hypha.coop/" title="Solidarity for Workers during the COVID-19 Pandemic" class="f6 link dim ph4 pv3 dib white bg-accent" target="_blank" rel="noopener">Check out our resource</a>
   </p>
 </div>
