--- a/_includes/sections/cta-covid.html
+++ b/_includes/sections/cta-covid.html
@@ -1,4 +1,4 @@
-<div class="lh-copy measure-narrow ml3 ba bw2 b--accent pa3">
+<div class="lh-copy measure-narrow-l ml3-l ba bw2 b--accent pa3">
   <p class="mt0">Like others in the Great Lakes region and Toronto, we’ve been closely monitoring the Novel Coronavirus 2019 situation via <a class="accent link underline-hover" href="https://www.toronto.ca/community-people/health-wellness-care/diseases-medications-vaccines/coronavirus/" target="_blank" rel="noopener">Toronto Public Health</a> and <a class="accent link underline-hover" href="https://www.ontario.ca/page/2019-novel-coronavirus" target="_blank" rel="noopener">Ontario Ministry of Health</a>.</p>
   <p>We're offering assistance and sharing resources on how we work as a remote-first organization.</p>
   <p class="mb0">
